# github-deployments-dashboard

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  settings.template.json  setup.cfg  template.env
src/: __init__.py  check_data.py  commons.py  load_data.py  main.py  styles.py
src/models/: repository.py  settings.py
src/tools/: __init__.py  github_api.py  github_data.py
