[tool.poetry]
name = "Github Deployments Dashboard"
version = "0.0.1"
description = "Streamlit dashboard to monitor Github deployments"
authors = ["Daniel Ferrari"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10"
streamlit = "*"
requests = "*"
pydantic = "*"
watchdog = "*"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
import-linter = "*"
mypy = "*"
pydocstyle = "*"
types-requests = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
