[tool.poetry]
name = "Github Deployments Dashboard"
version = "0.0.1"
description = "Streamlit dashboard to monitor Github deployments"
authors = [
    "Daniel Ferrari <ferraridg@users.noreply.github.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10"
streamlit = "^1.25.0"
requests = "^2.31.0"
pydantic = "^2.1.1"
watchdog = "^3.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
import-linter = "*"
mypy = "*"
pydocstyle = "*"
types-requests = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
